# avhook-server-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vpkg-dep-auto-install.bat
cmake-scripts/: FindCrypto++.cmake
cpp-api/: CMakeLists.txt
etc/: config.json  database.db
python-api/: avs.py  main.py  rsa.py  tg-bot.py  xor.py
scripts/: auto-dependency-install.sh  build-server-dbg.sh  build-server-rel.sh
src/: CMakeLists.txt  consts.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/base64/: CMakeLists.txt  base64.cpp  base64.h
src/lib/crypto/: CMakeLists.txt  RSA.cpp  RSA.h  Xor.cpp  Xor.h  rsa.cpp  rsa.h
src/lib/json/include/nlohmann/detail/conversions/: to_chars.hpp
src/lib/json/single_include/nlohmann/: json.hpp
src/lib/nnl/: CMakeLists.txt  exceptions.h  nnl.cpp  nnl.h
src/lib/sha256/: CMakeLists.txt  sha256.c
src/lib/sqlite/: CMakeLists.txt  Connection.cpp  Connection.h  connection.cpp  connection.h  exceptions.h
src/srv/: CMakeLists.txt  ObservableObject.h  PacketFactory.cpp  PacketFactory.h  exceptions.h  server.cpp  server.h
src/srv/ClientHandle/: CMakeLists.txt  ClientHandle.cpp  ClientHandle.h
src/srv/DataBaseAPI/: ActivationKey.cpp  ActivationKey.h  CMakeLists.txt  Chat.cpp  Chat.h  ChatMessage.cpp  ChatMessage.h  Config.cpp  Config.h  DataBase.cpp  DataBase.h  IJsonExportable.h  Object.h  Product.cpp  Product.h  Subscription.cpp  Subscription.h  User.cpp  User.h  exceptions.h
src/srv/Factories/: PacketFactory.h
src/srv/decorators/: BaseDecorator.cpp  BaseDecorator.h  CMakeLists.txt  PremiumOnly.cpp  PremiumOnly.h  RegisteredOnly.cpp  RegisteredOnly.h  exceptions.h
src/srv/factories/: CMakeLists.txt  PacketFactory.cpp  PacketFactory.h
src/srv/network/: CMakeLists.txt  RSASocket.cpp  RSASocket.h  Socket.cpp  Socket.h  exceptions.h  network.cpp  network.h
src/srv/observers/: CMakeLists.txt  IBaseObserver.h  ObservableObject.h  OnPacket.cpp  OnPacket.h  OnServerStartup.cpp  OnServerStartup.h  OnUserAuth.cpp  OnUserAuth.h  OnUserConnected.cpp  OnUserConnected.h  OnUserDisconnected.cpp  OnUserDisconnected.h
src/srv/packets/: Auth.cpp  Auth.h  Base.cpp  Base.h  BasePacket.cpp  BasePacket.h  CMakeLists.txt  CreateChat.cpp  CreateChat.h  DeleteChat.cpp  DeleteChat.h  DownloadFile.cpp  DownloadFile.h  GetChatList.cpp  GetChatList.h  GetUserAVhookConfigs.cpp  GetUserAVhookConfigs.h  GetUserConfigs.cpp  GetUserConfigs.h  GetUserInfo.cpp  GetUserInfo.h  IChatAccessible.h  IPayloadExecutable.h  OnlineUsersICount.cpp  OnlineUsersICount.h  PacketID.h  SendChatMessage.cpp  SendChatMessage.h  SetUserName.cpp  SetUserName.h  SetUserStatus.cpp  SetUserStatus.h  UpdateAVhookUserConfig.cpp  UpdateAVhookUserConfig.h  UpdateUserConfig.cpp  UpdateUserConfig.h  exceptions.h
src/srv/packets/ChatMessageRelated/: CMakeLists.txt  ChatMessageRelated.cpp  ChatMessageRelated.h  GetOwner.cpp  GetOwner.h  GetText.cpp  GetText.h
src/srv/packets/ChatRelated/: CMakeLists.txt  ChatRelated.cpp  ChatRelated.h  GetHistory.cpp  GetHistory.h  GetInvite.cpp  GetInvite.h  GetName.cpp  GetName.h  SendMessage.cpp  SendMessage.h
src/srv/packets/ConfigRelated/: CMakeLists.txt  ConfigRelated.cpp  ConfigRelated.h  GetData.cpp  GetData.h  SetData.h
src/srv/packets/Misc/: Auth.cpp  Auth.h  CMakeLists.txt  FindUserByName.cpp  FindUserByName.h
src/srv/packets/ProductRelated/: CMakeLists.txt  GetName.cpp  GetName.h  GetProductList.cpp  GetProductList.h  ProductRelated.cpp  ProductRelated.h
src/srv/packets/Subscription/: CMakeLists.txt  CheckExpiration.cpp  CheckExpiration.h  GetExpireDate.cpp  GetExpireDate.h  GetProduct.cpp  GetProduct.h  SubscriptionRelated.cpp  SubscriptionRelated.h
src/srv/packets/User/: CMakeLists.txt  GetChatList.cpp  GetChatList.h  GetConfigs.cpp  GetName.cpp  GetName.h  SetName.h  SetStatus.cpp  SetStatus.h  UserRelated.cpp  UserRelated.h
src/srv/packets/UserRelated/: CMakeLists.txt  GetChatList.cpp  GetChatList.h  GetConfigs.cpp  GetConfigs.h  GetName.cpp  GetName.h  GetStatus.cpp  GetStatus.h  GetSubscriptions.cpp  GetSubscriptions.h  SetName.cpp  SetName.h  SetStatus.cpp  SetStatus.h  UserRelated.cpp  UserRelated.h
src/srv/packets/chat/: CMakeLists.txt  ChatRelated.cpp  GetHistory.h  GetInvite.h  GetName.cpp  SendMessage.cpp
src/srv/packets/config/: GetData.h  SetData.cpp
src/srv/packets/decorators/: AdminOnly.cpp  AdminOnly.h  BaseDecorator.cpp  BaseDecorator.h  CMakeLists.txt  CantModifyOtherUsers.cpp  CantModifyOtherUsers.h  ChatMembersOnly.cpp  ChatMembersOnly.h  OwnerOnly.cpp  OwnerOnly.h  PremiumOnly.cpp  PremiumOnly.h  RegisteredOnly.cpp  RegisteredOnly.h  exceptions.h
src/srv/packets/interfaces/: IChatAccessible.h  IUserAccessible.h
src/srv/utils/: CMakeLists.txt  GetConfigFile.cpp  GetConfigFile.h
tests/: CMakeLists.txt  dbapitest.cpp
tests/dbapi/: CMakeLists.txt  main.cpp
tests/encryption/: CMakeLists.txt  main.cpp
